[gd_scene load_steps=4 format=3 uid="uid://ccpuoibslaqcv"]

[ext_resource type="Script" path="res://Boid.gd" id="1_kkn1f"]
[ext_resource type="Script" path="res://main.gd" id="1_qyksv"]
[ext_resource type="Texture2D" uid="uid://bs37i4ur4p04w" path="res://icon.svg" id="1_xkykf"]

[node name="Level" type="Node2D"]
script = ExtResource("1_qyksv")

[node name="Ally1Boid" type="Node2D" parent="."]
script = ExtResource("1_kkn1f")
target_min_radius = 0.0
target_max_radius = 10.0
movement_speed = 50.0

[node name="Ally2Boid" type="Node2D" parent="."]
script = ExtResource("1_kkn1f")
target_min_radius = 0.0
target_max_radius = 10.0
movement_speed = 50.0

[node name="Ally3Boid" type="Node2D" parent="."]
script = ExtResource("1_kkn1f")
target_min_radius = 0.0
target_max_radius = 10.0
movement_speed = 50.0

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(564, 250)
texture = ExtResource("1_xkykf")

[node name="Ally1" type="Sprite2D" parent="."]
modulate = Color(0, 1, 0, 1)
position = Vector2(111, 250)
texture = ExtResource("1_xkykf")

[node name="Ally2" type="Sprite2D" parent="."]
modulate = Color(0, 0, 1, 1)
position = Vector2(243, 384)
texture = ExtResource("1_xkykf")

[node name="Ally3" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
position = Vector2(97, 415)
texture = ExtResource("1_xkykf")
